--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,18 @@
-#logo-header {
+#logoHeader{
     width: 100px;
     height: 70px;
 }
 
-.offcanvas-header img {
+.offcanvas-header img{
     width: 50px;
     height: 50px;
 }
-
-main {
+.carousel-indicators{
+    bottom: none !important;
+    margin-bottom: none !important;
+    top: 0 ;
+    margin-top: 1rem;
+}
+main{
     margin-top: 90px;
-    
 }
